changes after ajax changes to partial view

--- a/WebApp/Views/Appointment/Index.cshtml
+++ b/WebApp/Views/Appointment/Index.cshtml
@@ -3,6 +3,8 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_PatientLayout.cshtml";
 }
+<link href="~/Content/css/custom.css" rel="stylesheet">
+<link href="~/Content/css/style.css" rel="stylesheet">
 
 <!-- page content -->
 <div class="right_col">
@@ -60,13 +62,17 @@
 
 
             </div>
+    <input type="text" style="display:none" id="pvappid" value="0">
     <div class="modal fade" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel4">
         <div class="modal-dialog" role="document" style="width: 350px;">
             <div id='myModalContent' class="modal-content" style="border-radius: 0;">
-               
+                @{
+                    Html.RenderAction("ViewAppDetails", "Appointment",new {appID=0});
+                }
             </div>
         </div>
     </div><!-- View App Detail -->
+    
 
     <div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel1">
         <div class="modal-dialog" role="document">
@@ -76,14 +82,16 @@
                     <h4 class="modal-title" id="timingsmodaltitle"></h4>
                 </div><!--/.modal header-->
 
-                <div class="modal-body text-left">
+                <div class="modal-body text-left" style="height:230px">
                     <div class="row" id="docrow">
                         <input type="text" style="display:none" id="doctorid">
 
                         <form class="form-horizontal form-label-left">
-                            <div class="col-sm-offset-4 col-sm-4">
-                                <div class="xdisplay_inputx form-group has-feedback">
+                            <div class="col-sm-offset-4 col-sm-4" style="width:320px">
+                                <button style="font-size:14px" type="button" class="btn btn-primary btn-sm pull-right" id="RAPP" onclick="rescheduleApp($('#RAppID').val())">Reschedule App</button>
+                                <div class="xdisplay_inputx form-group has-feedback" style="width:168px">
                                     <input type="text" class="form-control has-feedback-left active" id="fetchdate" placeholder="Choose a Date" aria-describedby="inputSuccess2Status">
+                                    
                                     <span class="fa fa-calendar-o form-control-feedback left date" aria-hidden="true"></span>
                                     <span id="inputSuccess2Status" class="sr-only">(success)</span>
                                 </div>
@@ -95,7 +103,7 @@
                                 <ul class="doctor_time" id="TimingsData"></ul>
                             </div>
                             <input type="text" style="display:none" id="RAppID">
-                            <button type="button" class="btn btn-primary btn-sm pull-right" id="RAPP" onclick="rescheduleApp($('#RAppID').val())">Save</button>
+                           
                         </form>
 
                     </div><!-- Timing Slots -->
@@ -109,17 +117,17 @@
 
  <!-- Load View App Detail Popup -->
 <script>
-   
 
+    var fetchDate="";
     var _objAppointment = {};
     var _doctorName="";
     var _doctorID="";
     var appdate="";
     function sendVariables(doctorid, editappid,elem) {
-        
+
         _doctorID=doctorid;
         _doctorName= $(elem).data('assigned-id');
-       
+
         showDoctorTimings(doctorid,editappid);
     }
 
@@ -131,44 +139,60 @@
             var AppDetailPostBackURL = '/Appointment/ViewAppDetails';
             var docid = $buttonClicked.attr('data-id');
             var appID = $buttonClicked.attr('id');
-           
-           
-            $.ajax({
-                type: "GET",
-                url: AppDetailPostBackURL,
-                contentType: "application/json; charset=utf-8",
-                data: { "appID": appID },
-                datatype: "json",
-                success: function (data) {
-                    if(data!=undefined|| data!=null)
-                    {
-                        $('#myModalContent').html(data);
-                        $('#myModal4').modal('show');
-                        var $modal = $('#myModal4');
-                        $editappid = $modal.find('#editappid');
-                        $doctorid = $modal.find('#doctorid');
-                        $editappid.val(appID);
-                        $doctorid.val(docid);
-                    }
-                    else
-                    {
-                        new PNotify({ title: 'Error', text: "Dynamic content load failed.", type: 'error', styling: 'bootstrap3' });
-                        
-                    }
-                    
-                },
-                error: function (err) {
-                    new PNotify({ title: 'Error', text: err.statusText, type: 'error', styling: 'bootstrap3' });
-                }
+            //$('#myModalContent').html(data);
+            //$('#myModal4').modal('show');
+            //$("#myModalContent").load('@Url.Action("ViewAppDetails", "Appointment")', function () {
+                //callback();
+            //});
+            //$('#myModal4').modal('show');
+            
+            reloadModelContainer(function ()
+            {
+                var $modal = $('#myModal4');
+                $editappid = $modal.find('#editappid');
+                $doctorid = $modal.find('#doctorid');
+                $editappid.val(appID);
+                $doctorid.val(docid);
+                //Stop displaying loader
+                //stopLoader();
+
             });
+            //$.ajax({
+            //    type: "GET",
+            //    url: AppDetailPostBackURL,
+            //    contentType: "application/json; charset=utf-8",
+            //    data: { "appID": appID },
+            //    datatype: "json",
+            //    success: function (data) {
+            //        if(data!=undefined|| data!=null)
+            //        {
+            //            $('#myModalContent').html(data);
+            //            $('#myModal4').modal('show');
+            //            var $modal = $('#myModal4');
+            //            $editappid = $modal.find('#editappid');
+            //            $doctorid = $modal.find('#doctorid');
+            //            $editappid.val(appID);
+            //            $doctorid.val(docid);
+            //        }
+            //        else
+            //        {
+            //            new PNotify({ title: 'Error', text: "Dynamic content load failed.", type: 'error', styling: 'bootstrap3' });
+
+            //        }
+
+            //    },
+            //    error: function (err) {
+            //        new PNotify({ title: 'Error', text: err.statusText, type: 'error', styling: 'bootstrap3' });
+            //    }
+            //});
         });
 
 
     });
 
-   
+
     //Reschedule App
-    
+
     function rescheduleApp(appID)
     {
 
@@ -198,7 +222,7 @@
                             {
                                 //Stop displaying loader
                                 //stopLoader();
-                               
+
                             });
                         }
                         else
@@ -206,7 +230,7 @@
                             new PNotify({ title: 'Error', text: result.ApiResultModel.message, type: 'error', styling: 'bootstrap3' });
                             $('#myModal1').modal('hide');
                             $('#myModal4').modal('hide');
-                            
+
                         }
 
 
@@ -246,9 +270,10 @@
 
             docName = $('#' + mydocid).data('todo').doctorName;
         }
-        
+
         $("#doctorid").val(todoId);
-        $("#timingsmodaltitle").text(docName + " Timings");
+        var cap=docName.replace(/\w\S*/g, function(txt){return txt.charAt(0).toUpperCase() + txt.substr(1).toLowerCase();});
+        $("#timingsmodaltitle").text("Dr. "+cap + " Timings");
 
 
 
@@ -293,7 +318,7 @@
                     var tablehtml = "";
                     $.each(response.Object, function (item) {
 
-                        tablehtml = tablehtml + " <li><button id ='" + response.Object[item] + "' type='button' class='btn btn-primary' onclick='setDateTime(\"" + response.Object[item] + "\",\"" + fetchdate + "\")'>" + response.Object[item] + "</button></li>";
+                        tablehtml = tablehtml + " <li><button id ='" + response.Object[item] + "' type='button' class='btn btn-primary' onclick='setDateTime(\"" + response.Object[item] + "\",\"" + fetchdate + "\")' style='width:85px'>" + response.Object[item] + "</button></li>";
 
                     });
 
@@ -306,8 +331,10 @@
         });
     }
 
-    function showDoctorTimings(doctorID,appID) {
-
+    function showDoctorTimings(doctorID,appID,appDate) {
+        //alert(appDate);
+        var cappDate = appDate.split("/");
+        var f = new Date(cappDate[2], cappDate[1] - 1, cappDate[0]);
         $("#RAppID").val(appID);
         var today = new Date();
         var dd = today.getDate();
@@ -326,7 +353,8 @@
         $('#fetchdate').val(today);
         var _objSearch = {};
 
-        _objSearch["appDate"] = $('#fetchdate').val();
+        _objSearch["appDate"] = appDate;
+        $('#fetchdate').val(appDate);
         _objSearch["doctorID"] = doctorID;
 
         var div = "";
@@ -343,7 +371,7 @@
                     var tablehtml = "";
                     $.each(response.Object, function (item) {
 
-                        tablehtml = tablehtml + " <li><button id ='" + response.Object[item] + "' type='button' class='btn btn-primary' onclick='setDateTime(\"" + response.Object[item] + "\",\"" + $("#fetchdate").val() + "\")'>" + response.Object[item] + "</button></li>";
+                        tablehtml = tablehtml + " <li><button id ='" + response.Object[item] + "' type='button' class='btn btn-primary' onclick='setDateTime(\"" + response.Object[item] + "\",\"" + $("#fetchdate").val() + "\")' style='width:85px'>" + response.Object[item] + "</button></li>";
 
                     });
 
@@ -377,7 +405,7 @@
     }
 
     function reloadContainer(callback) {
-        
+
         $("#divReschedule").load('@Url.Action("PartialReschedule", "Appointment")', function () {
             callback();
         });
@@ -386,6 +414,14 @@
         });
 
 
+    }
+    function reloadModelContainer(callback) {
+        var appid=$("#pvappid").val();
+      
+        $("#myModalContent").load('@Url.Action("ViewAppDetails", "Appointment")?appID='+appid, function () {
+            callback();
+        });
+       
     }
 
 </script> 
