--- a/WebApp/Content/css/custom.css
+++ b/WebApp/Content/css/custom.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+﻿@charset "UTF-8";
 .left_col {
   background: #2A3F54; }
 
@@ -1493,6 +1493,30 @@ span.right {
 .dashboard_graph .col-md-9, .dashboard_graph .col-md-3 {
   padding: 0; }
 
+.user-detail {
+	max-width: 250px;
+	margin: 0 auto;
+	color: #375781;
+	height: 100px;
+}
+
+.img-viewdetail
+{
+    float: left;
+    border-radius: 50%;
+	max-width: 100px;
+}
+.img-1 {
+	float: left;
+}
+.img-1 img {
+	border-radius: 50%;
+	max-width: 100px;
+}
+.name-sec {
+	float: left;
+	margin-left: 20px;
+}
 a.user-profile {
   color: #5E6974 !important; }
 
