--- a/WebApp/Views/Appointment/PartialUpcoming.cshtml
+++ b/WebApp/Views/Appointment/PartialUpcoming.cshtml
@@ -39,16 +39,18 @@ else
                     <!-- <td><button class="btn btn-primary btn-sm m-b-0 " type="submit">View</button></td> -->
                     <td>
                         <div class="btn-group" role="group">
+                            
                             <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Action
                                 <span class="caret"></span>
                             </button>
+                            
                             <ul class="dropdown-menu dropdown-menu-right">
                                 @*<li><a href='#' data-toggle="modal" class="thumbnail-col-inner"  data-id="@item.doctorID" id="@item.appID" data-target="#myModal4"
                                        data-todo='{"appID":"@item.appID","appDateTime":"@item.appDate@item.appTime","rov":"@item.rov","chiefComplaints":"@item.chiefComplaints","amount":"@item.paymentAmount","pharmacy":"@item.pharmacy"
                                        ,"cellPhone":"@item.cellphone"}'>View Detail</a></li>*@
-                                <li><a href="#" data-toggle="modal" class="thumbnail-col-inner" data-id="@item.doctorID" id="@item.appID" data-target="#myModal4">View Detail</a></li>
-                                <li><a href="#" class="reschedule" data-id="@item.appDate" data-toggle="modal" data-target="#myModal1"  data-todo='{"docid":"@item.doctorID","doctorName":"@item.DoctorName","appID":"@item.appID","appDate":"@item.appDate"}' onclick=showDoctorTimings(@item.doctorID,@item.appID) id="@item.doctorID">Reschedule App</a></li>
+                                <li><a href="#" data-toggle="modal" class="thumbnail-col-inner" data-id="@item.doctorID" id="@item.appID" data-target="#myModal4" onclick=$("#pvappid").val(@item.appID);>View Detail</a></li>
+                                <li><a href="#" class="reschedule" data-id="@item.appDate" data-toggle="modal" data-target="#myModal1"  data-todo='{"docid":"@item.doctorID","doctorName":"@item.DoctorName","appID":"@item.appID","appDate":"@item.appDate"}' onclick=showDoctorTimings(@item.doctorID,@item.appID,'@item.appDate') id="@item.doctorID">Reschedule App</a></li>
 
 </ul>
                         </div>
@@ -127,9 +129,10 @@ else
         var $datatable = $('#datatable-checkbox');
 
         $datatable.dataTable({
-          'order': [[ 1, 'asc' ]],
+          'order': [[ 2, 'asc' ]],
           'columnDefs': [
-            { orderable: false, targets: [0] }
+            { orderable: false, targets: [0] },
+             
           ]
         });
         $datatable.on('draw.dt', function() {
