--- a/WebApp/Views/DoctorAppointment/PartialDoctorViewAppDetail.cshtml
+++ b/WebApp/Views/DoctorAppointment/PartialDoctorViewAppDetail.cshtml
@@ -16,6 +16,7 @@
     var chiefComplaints = "";
     var amount = "";
     var pharmacy = "";
+    var formattedDate = "";
     foreach (var item in Model)
     {
         patientName = item.PatientName;
@@ -31,7 +32,11 @@
         pharmacy = item.pharmacy;
     }
 
-
+    if (appDate != "")
+    {
+        DateTime date = DateTime.ParseExact(appDate.ToString(), "dd/MM/yyyy", null);
+        formattedDate = string.Format("{0:dd MMM, yyyy}", date);
+    }
 
     <div class="modal-header text-center" style="background: #E4F1FE; border-bottom-color: #c3bebe;">
         <h2 style="margin: 0; color: #337ab7"><b>Appoinment Details</b></h2>
@@ -43,21 +48,28 @@
                 <img src="../Content/images/img.jpg" alt="" class="m-b-10 img-responsive">
             </div>
             <div class="name-sec">
-                <h2>Patient: @patientName</h2>
-                <p>Age: @age Years</p>
-                <p>Gender: @gender</p>
-                <p id="cellPhone">Cell Phone: @cellPhone</p>
-                <p>Languages: @languages</p>
+                <h2>@patientName</h2>
+                <p style="font-size:10px">
+                    @age Years <br>
+                    Gender: @gender<br>
+                    Languages: @languages<br>
+                    Cell Phone:@cellPhone
+                </p>
             </div>
+            
         </div>
 
-        <div style="border-bottom: 1px Solid #c3bebe; border-top: 1px Solid #c3bebe; margin: 0 -15px 20px; padding: 10px 21px 0; float: left;">
-            <p style="color: #375781;"><span style="width: 150px; float: left;">Appointment Date/Time</span><b>@appDate - @appTime</b></p>
+        <div style="border-bottom: 1px Solid #c3bebe; border-top: 1px Solid #c3bebe; margin: 36px -15px 20px; padding: 10px 21px 0; ">
+            <p style="color: #375781;"><span style="width: 150px; float: left;">Appointment Date/Time</span><b>@formattedDate - @appTime</b></p>
         </div>
-        <p id="p_rov" style="color: #375781;"><b>Reason of Visit:</b> @rov</p>
-        <p id="p_chiefComplaints" style="color: #375781;"><b>Chief Complaint:</b> @chiefComplaints</p>
-        <p id="p_pharmacy" style="color: #375781;"><b>Pharmacy:</b> @pharmacy</p>
-        <p id="p_amount" style="color: #375781;"><b>Payment Amount</b> @amount</p>
+        <p style="color: #375781;font-family:Helvetica Neue,Roboto,Arial,Droid Sans,sans-serif; font-size: 14px;font-weight: 400;line-height: 1.471;"><b>Reason of Visit:</b><br> @rov</p>
+        <p id="p_chiefComplaints" style="color: #375781;font-family:Helvetica Neue,Roboto,Arial,Droid Sans,sans-serif; font-size: 14px;font-weight: 400;line-height: 1.471;"><b>Chief Complaint:</b><br> @chiefComplaints</p>
+        <p id="p_amount" style="color: #375781;font-family:Helvetica Neue,Roboto,Arial,Droid Sans,sans-serif; font-size: 14px;font-weight: 400;line-height: 1.471;"><b>Payment Amount</b><br> @amount</p>
+
+
+        <div style="border-bottom: 1px Solid #c3bebe; border-top: 1px Solid #c3bebe; margin: 0 -15px -11px; padding: 10px 21px 0; ">
+            <p style="color: #375781;"><span style="width: 150px; float: left;">Pharmacy</span><b>@pharmacy</b></p>
+        </div><br />  
 
         @*<label style="font-weight: 300;" for="">Please enter the number we should call</label>
         <input type="text" placeholder="(469)237-3768" style="max-width: 100%;" class="form-control" />*@
