resolve font issue on appointment

--- a/WebApp/Views/Appointment/Index.cshtml
+++ b/WebApp/Views/Appointment/Index.cshtml
@@ -3,9 +3,32 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_PatientLayout.cshtml";
 }
-<link href="~/Content/css/custom.css" rel="stylesheet">
-<link href="~/Content/css/style.css" rel="stylesheet">
+<style>
+    .user-detail {
+	max-width: 250px;
+	margin: 0 auto;
+	color: #375781;
+	height: 100px;
+}
 
+.img-viewdetail
+{
+    float: left;
+    border-radius: 50%;
+	max-width: 100px;
+}
+.img-1 {
+	float: left;
+}
+.img-1 img {
+	border-radius: 50%;
+	max-width: 100px;
+}
+.name-sec {
+	float: left;
+	margin-left: 20px;
+}
+</style>
 <!-- page content -->
 <div class="right_col">
     <div class="page-title">
