--- a/WebApp/Views/DoctorAppointment/Index.cshtml
+++ b/WebApp/Views/DoctorAppointment/Index.cshtml
@@ -3,8 +3,34 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_DoctorLayout.cshtml";
 }
-<link href="~/Content/css/style.css" rel="stylesheet">
-<link href="~/Content/css/custom.css" rel="stylesheet">
+<style>
+    .user-detail {
+        max-width: 250px;
+        margin: 0 auto;
+        color: #375781;
+        height: 100px;
+    }
+
+    .img-viewdetail {
+        float: left;
+        border-radius: 50%;
+        max-width: 100px;
+    }
+
+    .img-1 {
+        float: left;
+    }
+
+        .img-1 img {
+            border-radius: 50%;
+            max-width: 100px;
+        }
+
+    .name-sec {
+        float: left;
+        margin-left: 20px;
+    }
+</style>
 
 @*<script type="text/javascript" src="~/Scripts/jquery.min.js"></script>
 <script type="text/javascript" src="~/Scripts/~/Scripts/bootstrap.min.js"></script>*@
