1. Added dropdowns for title and suffix 2. added missing patient information 3. Fixed validation issue 4. Added masking in cell phomne 5. Added option in time zone 6. Increased width of secret question dropdown 7. When update in profile photo at that time updated session variable too

--- a/WebApp/Views/DoctorProfile/Index.cshtml
+++ b/WebApp/Views/DoctorProfile/Index.cshtml
@@ -79,17 +79,17 @@
                                                     Title
                                                 </label>
                                                 <div class="">
-                                                    @Html.TextBoxFor(x => x.Title, new { @class = "form-control" })
+                                                    @Html.DropDownListFor(x => x.TitleName, (List<SelectListItem>)ViewBag.drpdnTitle, "Select", new { @class = "form-control" })
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-lg-4 col-md-4 col-sm-12">
                                             <div class="form-group">
                                                 <label class="control-label">
-                                                    Prefix
+                                                    Suffix
                                                 </label>
                                                 <div class="">
-                                                    @Html.TextBoxFor(x => x.Prefix, new { @class = "form-control" })
+                                                    @Html.DropDownListFor(x => x.Prefix, (List<SelectListItem>)ViewBag.drpdnSuffix, "Select", new { @class = "form-control" })
                                                 </div>
                                             </div>
                                         </div>
@@ -155,8 +155,9 @@
                                                 <label class="control-label">
                                                     Time Zone<span class="required">*</span>
                                                 </label>
+                                                <span id="spnErrorTimeZone" style="display:none; color:red; float:right;">TimeZone is required</span>
                                                 <div class="">
-                                                    @Html.DropDownListFor(x => x.TimeZone, (List<SelectListItem>)ViewBag.drpdnTimeZone, new { @class = "form-control" })
+                                                    @Html.DropDownListFor(x => x.TimeZone, (List<SelectListItem>)ViewBag.drpdnTimeZone, "Select TimeZone" ,new { @class = "form-control" })
                                                 </div>
                                             </div>
                                         </div>
@@ -400,21 +401,21 @@
                                     </div>
                                     <form id="frmSecretAnswer">
                                         <div class="form-group">
-                                            <label>
+                                            <label style="width:100%;">
                                                 @Html.DropDownListFor(x => x.SectetQuestion1, (List<SelectListItem>)ViewBag.SecretQuestion, new { @class = "form-control" })
                                             </label>
                                             <span id="spnErrorAnswer1" style="display:none; color:red; float:right;">Please provide answer.</span>
                                             @Html.TextBoxFor(x => x.SectetAnswer1, new { @class = "form-control" })
                                         </div>
                                         <div class="form-group">
-                                            <label>
+                                            <label style="width:100%;">
                                                 @Html.DropDownListFor(x => x.SectetQuestion2, (List<SelectListItem>)ViewBag.SecretQuestion, new { @class = "form-control" })
                                             </label>
                                             <span id="spnErrorAnswer2" style="display:none; color:red; float:right;">Please provide answer.</span>
                                             @Html.TextBoxFor(x => x.SectetAnswer2, new { @class = "form-control" })
                                         </div>
                                         <div class="form-group">
-                                            <label>
+                                            <label style="width:100%;">
                                                 @Html.DropDownListFor(x => x.SectetQuestion3, (List<SelectListItem>)ViewBag.SecretQuestion, new { @class = "form-control" })
                                             </label>
                                             <span id="spnErrorAnswer3" style="display:none; color:red; float:right;">Please provide answer.</span>
@@ -460,6 +461,67 @@
 @section scripts{
 
     <script>
+        $(document).ready(function () {
+            //Bind unobstructive validations - Starts
+
+            $("#FirstName").change(function () {
+                if ($("#spnErrorFirstName").is(":visible") && $("#FirstName").val() != "") {
+                    $("#FirstName").removeClass("redBorder");
+                    $("#spnErrorFirstName").hide();
+                }
+            });
+            $("#LastName").change(function () {
+                if ($("#spnErrorLastName").is(":visible") && $("#LastName").val() != "") {
+                    $("#LastName").removeClass("redBorder");
+                    $("#spnErrorLastName").hide();
+                }
+            });
+            $("#DOB").change(function () {
+                if ($("#spnErrorDOB").is(":visible") && $("#DOB").val() != "") {
+                    $("#DOB").removeClass("redBorder");
+                    $("#spnErrorDOB").hide();
+                }
+            });
+            $("#TimeZone").change(function () {
+                if ($("#spnErrorTimeZone").is(":visible") && $("#TimeZone").val() != "") {
+                    $("#TimeZone").removeClass("redBorder");
+                    $("#spnErrorTimeZone").hide();
+                }
+            });
+
+            $("#Languages").change(function () {
+                if ($("#spnErrorLanguages").is(":visible") && $("#Languages").val() != "") {
+                    $("#Languages").removeClass("redBorder");
+                    $("#spnErrorLanguages").hide();
+                }
+            });
+
+            $("#LicenseStates").change(function () {
+                if ($("#spnErrorLicenseState").is(":visible") && $("#LicenseStates").val() != "") {
+                    $("#LicenseStates").removeClass("redBorder");
+                    $("#spnErrorLicenseState").hide();
+                }
+            });
+
+            $("#Speciality").change(function () {
+                if ($("#spnErrorSpeciality").is(":visible") && $("#Speciality").val() != "") {
+                    $("#Speciality").removeClass("redBorder");
+                    $("#spnErrorSpeciality").hide();
+                }
+            });
+
+            ////Bind unobstructive validations - Ends
+
+            //Add masking on phone no
+            document.getElementById('CellPhone').addEventListener('input', function (e) {
+                var x = e.target.value.replace(/\D/g, '').match(/(\d{0,3})(\d{0,3})(\d{0,4})/);
+                e.target.value = !x[2] ? x[1] : '(' + x[1] + ') ' + x[2] + (x[3] ? '-' + x[3] : '');
+            });
+            document.getElementById('HomePhone').addEventListener('input', function (e) {
+                var x = e.target.value.replace(/\D/g, '').match(/(\d{0,3})(\d{0,3})(\d{0,4})/);
+                e.target.value = !x[2] ? x[1] : '(' + x[1] + ') ' + x[2] + (x[3] ? '-' + x[3] : '');
+            });
+        });
 
         function validateProfileForm() {
 
@@ -502,6 +564,16 @@
             else {
                 $("#DOB").removeClass("redBorder");
                 $("#spnErrorDOB").hide();
+            }
+
+            if (($("#TimeZone").val() || "") == "") {
+                isValid = false;
+                $("#TimeZone").addClass("redBorder").focus();
+                $("#spnErrorTimeZone").show();
+            }
+            else {
+                $("#TimeZone").removeClass("redBorder");
+                $("#spnErrorTimeZone").hide();
             }
 
             if ($("#Languages").val() == null) {
